# pagi-uac-main

./: .cursorrules  .env.example  .gitignore  Cargo.toml  README.md  pagi-up.ps1  pagi-up.sh
.cursor/rules/: architecture.mdc  verification.mdc
add-ons/pagi-companion-ui/src/: app.rs
add-ons/pagi-gateway/: Cargo.toml
add-ons/pagi-gateway/data/pagi_chronos_recall_test/: db  snap.0000000000000622
add-ons/pagi-gateway/data/pagi_ethos_violation_test/: db  snap.000000000000074B
add-ons/pagi-gateway/data/pagi_kardia_verify_test/: db  snap.0000000000000978
add-ons/pagi-gateway/data/pagi_kb2_test/: db  snap.0000000000000764
add-ons/pagi-gateway/data/pagi_knowledge_autonomous_test/: db  snap.00000000000108DB
add-ons/pagi-gateway/data/pagi_knowledge_blueprint_test/: db  snap.00000000000008D2
add-ons/pagi-gateway/data/pagi_knowledge_draft_test/: db  snap.0000000000000AE8
add-ons/pagi-gateway/data/pagi_knowledge_generate_test/: db  snap.000000000000069F
add-ons/pagi-gateway/data/pagi_knowledge_pruner_test/: db  snap.0000000000000DF7
add-ons/pagi-gateway/data/pagi_knowledge_refresh_test/: db  snap.00000000000008B6
add-ons/pagi-gateway/data/pagi_knowledge_sales_test/: db  snap.0000000000000654
add-ons/pagi-gateway/data/pagi_knowledge_scraper_test/: db  snap.0000000000000CFF
add-ons/pagi-gateway/data/pagi_knowledge_test/: db  snap.00000000000003F2
add-ons/pagi-gateway/data/pagi_vault/: db  snap.00000000000017B4
add-ons/pagi-gateway/data/pagi_vault_autonomous_test/: db  snap.0000000000000D2D
add-ons/pagi-gateway/data/pagi_vault_draft_test/: db  snap.00000000000017E6
add-ons/pagi-gateway/data/pagi_vault_generate_test/: db  snap.0000000000000C2D
add-ons/pagi-gateway/data/pagi_vault_sales_test/: db  snap.0000000000000BB1
add-ons/pagi-gateway/src/: main.rs
add-ons/pagi-gateway/src/handlers/: chat.rs
add-ons/pagi-offsec-ui/src/: app.rs
add-ons/pagi-personal-ui/src/: app.rs
add-ons/pagi-studio-ui/assets/studio-interface/: App.tsx  PAGI_WORKSPACE.md  index.css  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
add-ons/pagi-studio-ui/assets/studio-interface/components/: ChatInterface.tsx  LogTerminal.tsx  SettingsSidebar.tsx
add-ons/pagi-studio-ui/assets/studio-interface/services/: apiService.ts
add-ons/pagi-studio-ui/assets/studio-interface/src/api/: config.ts
add-ons/pagi-studio-ui/src/: app.rs  server_main.rs
config/: gateway.toml
crates/pagi-core/: Cargo.toml
crates/pagi-core/src/: lib.rs  shared.rs
crates/pagi-core/src/knowledge/: bootstrap.rs  mod.rs  store.rs
crates/pagi-core/src/orchestrator/: control.rs  mod.rs
crates/pagi-skills/: Cargo.toml
crates/pagi-skills/src/: fs_tools.rs  lib.rs  model_router.rs
docs/: frontend-backend-integration.md
pagi-frontend/: app.js  index.html
pagi-frontend/assets/: style.css
pagi-gateway/: Cargo.toml
pagi-gateway/data/pagi_kb2_test/: db  snap.0000000000000119
pagi-gateway/data/pagi_knowledge_autonomous_test/: db  snap.0000000000001CA2
pagi-gateway/data/pagi_knowledge_blueprint_test/: db
pagi-gateway/data/pagi_knowledge_draft_test/: db  snap.00000000000001A6
pagi-gateway/data/pagi_knowledge_generate_test/: db  snap.000000000000012E
pagi-gateway/data/pagi_knowledge_refresh_test/: db  snap.000000000000010E
pagi-gateway/data/pagi_knowledge_sales_test/: db  snap.00000000000001C7
pagi-gateway/data/pagi_knowledge_scraper_test/: db  snap.000000000000013C
pagi-gateway/data/pagi_knowledge_test/: db  snap.00000000000000D9
pagi-gateway/data/pagi_vault/: db  snap.00000000000004E9
pagi-gateway/data/pagi_vault_autonomous_test/: db  snap.0000000000000278
pagi-gateway/data/pagi_vault_draft_test/: db  snap.00000000000003A2
pagi-gateway/data/pagi_vault_generate_test/: db  snap.00000000000002B3
pagi-gateway/data/pagi_vault_sales_test/: db  snap.00000000000000E7
pagi-gateway/src/: main.rs
pagi-knowledge/: Cargo.toml
pagi-knowledge/src/: kb1.rs  kb2.rs  kb3.rs  kb4.rs  kb5.rs  kb6.rs  kb7.rs  kb8.rs  lib.rs  store.rs
pagi-memory/: Cargo.toml
pagi-memory/src/: lib.rs
pagi-orchestrator/: Cargo.toml
pagi-orchestrator/src/: lib.rs  planner.rs
pagi-shared/: Cargo.toml
pagi-shared/src/: lib.rs
pagi-skills/: Cargo.toml
pagi-skills/src/: community_pulse.rs  community_scraper.rs  draft_response.rs  knowledge_insert.rs  knowledge_pruner.rs  knowledge_query.rs  lead_capture.rs  lib.rs  model_router.rs  research_audit.rs  sales_closer.rs
research_sandbox/: report_01.md
