[workspace]
resolver = "2"
members = [
    "pagi-gateway",
    "pagi-orchestrator",
    "pagi-memory",
    "pagi-knowledge",
    "pagi-skills",
    "pagi-shared",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
sled = "0.34"
tracing = "0.1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.18"
