[workspace]
resolver = "2"
members = [
    "crates/pagi-core",
    "crates/pagi-skills",
    "add-ons/pagi-gateway",
    "add-ons/pagi-daemon",
    "add-ons/pagi-studio-ui",
    "add-ons/pagi-companion-ui",
    "add-ons/pagi-offsec-ui",
    "add-ons/pagi-personal-ui",
    "add-ons/pagi-control-panel",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.14", default-features = false, features = ["toml"] }
axum = "0.7"
sled = "0.34"
tracing = "0.1"
dashmap = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
scraper = "0.18"
dotenvy = "0.15"
