[package]
name = "pagi-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { workspace = true }
scraper = { workspace = true }
pagi-knowledge = { path = "../pagi-knowledge" }
pagi-memory = { path = "../pagi-memory" }
pagi-orchestrator = { path = "../pagi-orchestrator" }
pagi-shared = { path = "../pagi-shared" }
