[package]
name = "pagi-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
async-stream = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
dotenvy = { workspace = true }
pagi-core = { path = "../../crates/pagi-core" }
pagi-skills = { path = "../../crates/pagi-skills" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
