[package]
name = "pagi-core"
version = "0.1.0"
edition = "2021"
description = "AGI core: shared types, orchestrator, memory, and 8-slot knowledge base"

[dependencies]
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
sled = { workspace = true }
dashmap = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
