[package]
name = "pagi-core"
version = "0.1.0"
edition = "2021"
description = "AGI core: shared types, orchestrator, memory, and 8-slot knowledge base"

[dependencies]
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
sled = { workspace = true }
dashmap = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = { workspace = true }
aes-gcm = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3"
