[package]
name = "pagi-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { workspace = true }
scraper = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
pagi-core = { path = "../pagi-core" }

[dev-dependencies]
tempfile = "3"
